# pivuq

./: .flake8  .gitattributes  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  README.md  environment.yml  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml  test.yml
docs/: requirements.txt
docs/source/: api.rst  citation.rst  conf.py  examples.rst  index.rst  usage.rst
docs/source/api/: disparity.rst  lib.rst  warping.rst
examples/: 01_image_matching.ipynb  01_image_matching_cylinder.ipynb  01_image_matching_testdata.ipynb  02_image_matching_cylinder.ipynb  03_disparity_testdata_ILK.ipynb  04_disparity_cylinder_ILK.ipynb  05_disparity_vector_computation_cylinder.ipynb  06_uncertainty_quantification_SWS_testdata.ipynb  06_uncertainty_quantification_testdata.ipynb  07_uncertainty_quantification_ALL_cylinder.ipynb
examples/data/cylinder_wake/: frameA.tif  frameB.tif
examples/data/particledisparity_code_testdata/: B00010.tif  B00011.tif  README.md
src/pivuq/: __about__.py  __init__.py  disparity.py  lib.py  utils.py  warping.py
tests/: test__version.py  test_disparity.py  test_import.py  test_version.py  test_warping.py
