[tool.poetry]
name = "pivuq"
version = "0.3.0"
description = "A library for PIV Uncertainty Quantification"
authors = ["MrLento234 <lento.manickathan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lento234/pivuq"
documentation = "https://pivuq.readthedocs.io"
keywords = ["PIV", "UQ"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "~3.5.1"
numba = {version = "^0.55.1", python = "~3.9" }
numpy = "~1.21.0"
scikit-image = "^0.19.2"
scipy = {version = "^1.8.0", python = "~3.9" }

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
